crates/pcb/tests/snapshots/simple__help.snap
---
source: crates/pcb/tests/simple.rs
expression: output
---
Command: pcb help
Exit Code: 0

--- STDOUT ---
PCB tool with build and layout capabilities

Usage: pcb <COMMAND>

Commands:
  auth        Manage authentication
  build       Build PCB projects
  test        Run tests in .zen files
  migrate     Migrate PCB projects
  mod         Manage package dependency manifests
  add         Add or update a direct dependency
  sync        Reconcile source imports and hydrate package dependency manifests
  new         Create a new workspace, board, package, or component
  update      Update dependencies to latest compatible versions
  self        Update the pcb tool itself
  bom         Generate Bill of Materials (BOM)
  info        Display workspace and board information
  import      Import KiCad projects into a Zener workspace
  doc         View embedded Zener documentation
  layout      Layout PCB designs
  fmt         Format .zen files
  open        Open PCB layout files
  publish     Publish packages and boards by creating version tags
  preview     Build and upload a preview release for a board
  vendor      Vendor external dependencies
  fork        Reserved subcommand for future use
  embed-step  Embed a STEP model into a KiCad footprint
  scan        Scan datasheets from local PDFs or URLs
  search      Search for electronic components
  simulate    Run SPICE simulations
  ipc2581     IPC-2581 parser and inspection tool
  help        Print this message or the help of the given subcommand(s)

Options:
  -h, --help     Print help
  -V, --version  Print version
--- STDERR ---
