crates/pcb/tests/snapshots/simple__offline_build_reuses_selected_workspace_pseudo_version.snap
---
source: crates/pcb/tests/simple.rs
expression: snapshot
---
--- online ---
Command: pcb build boards/B/B.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
✓ B.zen (2 components)
--- offline ---
Command: pcb build boards/B/B.zen --offline
Exit Code: 0

--- STDOUT ---

--- STDERR ---
✓ B.zen (2 components)
--- pcb.sum dep lines ---
github.com/mycompany/components/SimpleResistor <SELECTED_PSEUDO_VERSION> h1:k8ADEeH8x7tlV4TOhiqNIfZD9BE0XgcFR0AxaUZc1Rg=
github.com/mycompany/components/SimpleResistor <SELECTED_PSEUDO_VERSION>/pcb.toml h1:E3ma1g4h68BKGUerKwVIXkTssUyU3/mOx4I3AVS1nRA=
