crates/pcb/tests/snapshots/simple__simple_board.snap
---
source: crates/pcb/tests/simple.rs
expression: output
---
Command: pcb build boards/SimpleBoard.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
✓ SimpleBoard.zen (0 components)
