crates/pcb/tests/snapshots/simple__simple_workspace.snap
---
source: crates/pcb/tests/simple.rs
expression: output
---
Command: pcb build boards/TestBoard.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
✓ TestBoard.zen (10 components)
