crates/pcb/tests/snapshots/simple__simple_workspace_bom.snap
---
source: crates/pcb/tests/simple.rs
expression: "sb.snapshot_run(\"pcb\", [\"bom\", \"boards/TestBoard.zen\", \"-f\", \"json\"])"
---
Command: pcb bom boards/TestBoard.zen -f json
Exit Code: 0

--- STDOUT ---
[
  {
    "path": "C1.C",
    "designator": "C1",
    "package": "0402",
    "value": "100nF",
    "component_type": "Capacitor",
    "capacitance": {
      "value": "0.000000100",
      "tolerance": "0",
      "unit": "Farads"
    },
    "dnp": false
  },
  {
    "path": "C2.C",
    "designator": "C2",
    "package": "0805",
    "value": "10uF",
    "component_type": "Capacitor",
    "capacitance": {
      "value": "0.000010",
      "tolerance": "0",
      "unit": "Farads"
    },
    "dnp": false
  },
  {
    "path": "C3.C",
    "designator": "C3",
    "package": "0402",
    "value": "22pF",
    "component_type": "Capacitor",
    "capacitance": {
      "value": "0.000000000022",
      "tolerance": "0",
      "unit": "Farads"
    },
    "dnp": false
  },
  {
    "path": "C4.C",
    "designator": "C4",
    "package": "0402",
    "value": "22pF",
    "component_type": "Capacitor",
    "capacitance": {
      "value": "0.000000000022",
      "tolerance": "0",
      "unit": "Farads"
    },
    "dnp": false
  },
  {
    "path": "LED1.D1.LED",
    "designator": "D1",
    "package": "0603",
    "value": "LED GREEN",
    "dnp": false
  },
  {
    "path": "LED2.D1.LED",
    "designator": "D2",
    "package": "0603",
    "value": "LED RED",
    "dnp": false
  },
  {
    "path": "LED1.R1.R",
    "designator": "R1",
    "package": "0603",
    "value": "330",
    "component_type": "Resistor",
    "resistance": {
      "value": "330",
      "tolerance": "0",
      "unit": "Ohms"
    },
    "dnp": false
  },
  {
    "path": "LED2.R1.R",
    "designator": "R2",
    "package": "0603",
    "value": "330",
    "component_type": "Resistor",
    "resistance": {
      "value": "330",
      "tolerance": "0",
      "unit": "Ohms"
    },
    "dnp": false
  },
  {
    "path": "R1.R",
    "designator": "R3",
    "package": "0603",
    "value": "10k",
    "component_type": "Resistor",
    "resistance": {
      "value": "10000",
      "tolerance": "0",
      "unit": "Ohms"
    },
    "dnp": false
  },
  {
    "path": "X1.Y",
    "designator": "Y1",
    "package": "5032_2Pin",
    "value": "16MHz 18pF",
    "dnp": false
  }
]
--- STDERR ---
