crates/pcb/tests/snapshots/simple__simple_workspace_build.snap
---
source: crates/pcb/tests/simple.rs
assertion_line: 165
expression: output
---
Command: pcb build boards/TestBoard.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Warning: io() 'GND' in module 'LED1' is not connected to any ports
    ╭─[ <TEMP_DIR>/boards/modules/LedModule.zen:10:7 ]
 10 │GND = io("GND", Ground)
    │              ╰───────── io() 'GND' in module 'LED1' is not connected to any ports

✓ TestBoard.zen (10 components)
