crates/pcb/tests/snapshots/simple__simple_workspace_release.snap
---
source: crates/pcb/tests/simple.rs
expression: "sb.snapshot_run(\"pcb\",\n[\"release\", \"-b\", \"TestBoard\", \"-f\", \"json\", \"-S\",\n\"layout.drc.invalid_outline\", \"-S\", \"warnings\"])"
---
Command: pcb release -b TestBoard -f json -S layout.drc.invalid_outline -S warnings
Exit Code: 0

--- STDOUT ---
{
  "git": {
    "describe": "unknown",
    "hash": "unknown",
    "remotes": {},
    "workspace": "<TEMP_DIR>"
  },
  "release": {
    "board_name": "TestBoard",
    "created_at": "<TIMESTAMP>",
    "description": "Main test board for validation",
    "git_version": "unknown",
    "layout_path": "<TEMP_DIR>/boards/build/TestBoard",
    "schema_version": "1",
    "source_only": false,
    "staging_directory": "<TEMP_DIR>/.pcb/releases/TestBoard-unknown",
    "workspace_root": "<TEMP_DIR>",
    "zen_file": "boards/TestBoard.zen"
  },
  "system": {
    "arch": "<ARCH>",
    "cli_version": "<CLI_VERSION>",
    "kicad_version": "<KICAD_VERSION>",
    "platform": "<PLATFORM>",
    "user": "<USER>"
  }
}
--- STDERR ---
✓ Release information gathered
✓ Copying source files and dependencies
✓ Validating build from staged sources
✓ Copying layout files
✓ Generating board config
✓ Copying documentation
✓ Substituting version variables

┌───────────────────────────────────────────────────────────────────────────┐
│ Category                          Errors (excluded)   Warnings (excluded) │
╞═══════════════════════════════════════════════════════════════════════════╡
│ layout.drc.invalid_outline        (1)                 -                   │
│ layout.drc.lib_footprint_issues   -                   (10)                │
│ layout.drc.silk_over_copper       -                   (5)                 │
│ layout.drc.silk_overlap           -                   (8)                 │
│ Total                             (1)                 (23)                │
└───────────────────────────────────────────────────────────────────────────┘
✓ Running KiCad DRC checks
✓ Generating fabrication drawing
✓ Generating design BOM
✓ Generating gerber files
✓ Generating pick-and-place file
✓ Generating assembly drawings
✓ Generating ODB++ files
✓ Generating IPC-2581 file
✓ Generating STEP model
✓ Generating VRML model
✓ Generating GLB model
✓ Generating SVG rendering
✓ Writing release metadata
✓ Creating release archive
✓ Release unknown staged successfully
Release Summary
Archive: <TEMP_DIR>/.pcb/releases/TestBoard-unknown.zip
