crates/pcb/tests/snapshots/simple__simple_workspace_vendor.snap
---
source: crates/pcb/tests/simple.rs
expression: "sb.snapshot_run(\"pcb\", [\"vendor\", \"boards/TestBoard.zen\"])"
---
Command: pcb vendor boards/TestBoard.zen
Exit Code: 0

--- STDOUT ---
✓ Found 1 zen files to analyze
✓ Dependencies analyzed

✓ Vendored 18 dependencies from 1 designs
Vendor directory: <TEMP_DIR>/vendor
--- STDERR ---
