crates/pcb/tests/snapshots/simple__workspace_relative_paths_local_alias.snap
---
source: crates/pcb/tests/simple.rs
assertion_line: 225
expression: output
---
Command: pcb build foo.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
✓ foo.zen (1 components)
